force-app/main/default/objects/FETDataMap__c/FETDataMap__c.object-meta.xml
<CustomObject>
    <label>FET Data</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>MAP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FET Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>