force-app/main/default/objects/FETDataMap__c/fields/Map_Key__c.field-meta.xml
<CustomField>
    <fullName>Map_Key__c</fullName>
    <description>Map Key</description>
    <inlineHelpText>Map Key</inlineHelpText>
    <label>Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>