force-app/main/default/objects/FETDataMap__c/fields/Map_Value__c.field-meta.xml
<CustomField>
    <fullName>Map_Value__c</fullName>
    <description>Map Value</description>
    <label>Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>