force-app/main/default/objects/FETDataMap__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>MapName</description>
    <inlineHelpText>MapName</inlineHelpText>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>