force-app/main/default/objects/FETDataMap__c/validationRules/AllFieldsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AllFieldsMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Type__c ),
ISBLANK( Map_Key__c),
ISBLANK( Map_Value__c )
)</errorConditionFormula>
    <errorMessage>All Fields are Mandatory</errorMessage>
</ValidationRule>